@@ -1,3 +1,7 @@
+2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* POTFILES.skip: added process.pl
+
 2005-02-22  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
